@@ -30,7 +30,6 @@ import static java.util.Comparator.comparing;
 import java.util.Map;
 import java.util.function.BiPredicate;
 import java.util.function.Supplier;
-import static java.util.stream.Collectors.toList;
 import java.util.stream.Stream;
 import jdk.internal.jshell.tool.JShellTool.CompletionProvider;
 import jdk.jshell.SourceCodeAnalysis;
@@ -79,7 +78,7 @@ class ContinuousCompletionProvider implements CompletionProvider {
             List<CompletionProvider> candidates = wordCompletionProvider.entrySet().stream()
                     .filter(e -> matcher.test(e.getKey(), word))
                     .map(Map.Entry::getValue)
-                    .collect(toList());
+                    .toList();
             if (candidates.size() == 1) {
                 result = candidates.get(0).completionSuggestions(rest, cursor - space - 1, anchor).stream();
             } else {
@@ -89,7 +88,7 @@ class ContinuousCompletionProvider implements CompletionProvider {
         }
 
         return result.sorted(comparing(Suggestion::continuation))
-                     .collect(toList());
+                     .toList();
     }
 
 }
