@@ -29,7 +29,7 @@
  *          Beans.setGuiAvailable
  *          Introspector.setBeanInfoSearchPath
  *          PropertyEditorManager.setEditorSearchPath
- * @run main/othervm Test4080522
+ * @run main/othervm -Djava.security.manager=allow Test4080522
  * @author Graham Hamilton
  */
 
