@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,7 +27,7 @@
  * @summary Checks that there is no AccessControlException when
  * a heaviweight popup menu is shown from an applet.
  * @author Mikhail Lapshin
- * @run main bug6675802
+ * @run main/othervm -Djava.security.manager=allow  bug6675802
  */
 
 import javax.swing.*;
