@@ -38,7 +38,7 @@ import java.security.spec.X509EncodedKeySpec;
  * @test
  * @bug 8259319
  * @library /test/lib ..
- * @run main/othervm IllegalPackageAccess
+ * @run main/othervm -Djava.security.manager=allow IllegalPackageAccess
  */
 
 public class IllegalPackageAccess extends PKCS11Test {
@@ -71,6 +71,7 @@ public class IllegalPackageAccess extends PKCS11Test {
 
     @Override
     public void main(Provider p) throws Exception {
+        Policy.setPolicy(null);
         Policy.setPolicy(new MyPolicy());
         System.setSecurityManager(new SecurityManager());
 
